A changelog for recent builds as pasted into the sourceforge page.

Generally created by hand after running:
   hg log -rb2xx: > log.out
However contributors are encouraged to add their own entries for their work.

Since build 218:
----------------
* adodbapi updated to version 2.4.3 -- new examples folder includes short programs for
   reading and writing .xls spreadsheets and reading ACCESS .mdb files using SQL.
  New functions .is64bit.Python() and .is64bit.os() to help pick the correct drivers.
  New function .schema_table.names() returns a list of all tables in a database.
   see adodbapi/README.txt for more information.

* Fix issue implementing COM objects from within a virtualenv (Kevin Smyth 
  via issue #3597965)

* win32com.shell
	Add interfaces IFileOperation and IFileOperationProgressSink

* win32com.propsys
	Add interfaces IPropertyChange, IPropertyChangeArray, and IObjectWithPropertyKey
	Add functions PSCreateSimplePropertyChange, PSCreatePropertyChangeArray, and SHSetDefaultProperties

Since build 217:
----------------
* mapiutil.py GetPropTagName has been modified to return the fully qualified
  PT_UNICODE and PT_STRING8 type name. Added optional argument to override
  rawType default in GetMapiTypeName. (Nick Czeczulin)

* Fix the count of replaced terms in Pythonwin's search/replace (rupole).

* Fix obscure issues in the Pythonwin code browser and other uses of the 
  "hierlist" widget (rupole).

* Fix a crash using a COM "record" that holds an array (rupole).

* Fix error return in win32gui.GetClassName (rupole).

* Some misc fixed to win32timezone (Jason R. Coombs).

* Some fixes to win32com gencache for Python 3.x (Tim Golden)

* Fix ActiveScript exception hresults.

* RegQueryValueEx now return an empty list for blank REG_MULTI_SZ
  (rupole via bug #3531456)

* Add win32pdh.AddEnglishCounter (rupole via feature request #3529527)

* Fix post_install script use of the registry (rupole via bug #3536122)
