@@ -6,6 +6,18 @@ However contributors are encouraged to add their own entries for their work.
 
 Since build 218:
 ----------------
+ * Conversions from a Python object to a variant now does a better job at
+   deciding what variant type to use, taking into account the size and sign of
+   the value (Stefan Schukat via patch #127)
+
+ * Add support for VT_I8 and VT_UI8 when converting a variant into a Python
+   object (Stefan Schukat via patch #128)
+
+ * win32com.mapi.exchange
+   Added 64-bit support by excluding the 32-bit Ex2kSdk.lib functions from 64-bit builds.
+   Unfortunately, this means that only IExchangeManageStore::CreateStoreEntryID
+   is currently available in a 64-bit build. (Nick Czeczulin)
+
 * adodbapi updated to version 2.4.3 -- new examples folder includes short programs for
    reading and writing .xls spreadsheets and reading ACCESS .mdb files using SQL.
   New functions .is64bit.Python() and .is64bit.os() to help pick the correct drivers.
